--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "firebase-admin": "latest",
     "next": "latest",
+    "node-fetch": "^3.3.2",
     "openai": "latest",
     "react": "latest",
     "react-dom": "latest"
