--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,10 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
+    "baseUrl": ".",                           // ✅ Added
+    "paths": {                                // ✅ Added
+      "@/*": ["*"]
+    },
     "plugins": [
       {
         "name": "next"
