--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@google/genai": "^1.13.0",
     "@google/generative-ai": "^0.24.1",
     "firebase-admin": "latest",
     "json5": "^2.2.3",
