--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
   },
   "devDependencies": {
     "@types/react": "19.1.9",
+    "tailwindcss": "^3.4.9",
+    "postcss": "^8.4.38",
+    "autoprefixer": "^10.4.20",
     "typescript": "5.9.2"
   }
 }
